# obs-movie-blur-sync

./: CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
data/absojlut-autoblur-raspberry/scripts/: video_time_bridge.user.js
data/locale/: en-US.ini
data/obs-movie-blur-sync/scripts/: video_time_bridge.user.js
src/: plugin-main.cpp
